Add Event statuses to docs
